--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -104,8 +104,8 @@
     height: 50px;
     box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.75);
     position: absolute;
-    right: 20px;
-    top: -20px;
+    right: 10%;
+    top: -10%;
   }
 
   .arrow__image {
@@ -186,7 +186,7 @@
   .footer-nav {
     width: 50%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
   }
 }
 
