--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -15,6 +15,7 @@ body {
   color: $main-color;
   line-height: 1.2;
   font-size: 14px;
+  position: relative;
 }
 
 p {
@@ -30,6 +31,7 @@ ul {
   margin: 0;
   padding: 0;
 }
+
 img {
   display: block;
   max-width: 100%;
@@ -37,8 +39,8 @@ img {
 }
 
 .visually-hidden:not(:focus):not(:active),
-input[type="”checkbox”"].visually-hidden,
-input[type="”radio”"].visually-hidden {
+input[type='”checkbox”'].visually-hidden,
+input[type='”radio”'].visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
