--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -97,22 +97,24 @@
 
 @media (min-width: 768px) {
   .arrow {
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #333333;
     border-radius: 50%;
     width: 50px;
     height: 50px;
-    box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.75);
-    position: absolute;
-    right: 10%;
-    top: -10%;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+    position: fixed;
+    right: 5%;
+    bottom: 5%;
   }
 
-  .arrow__image {
-    background-image: url(../images/arrow.png);
-    background-size: 20px;
-    background-repeat: no-repeat;
-    background-position: center;
+  .arrow__up {
+    font-family: $main-font-stack;
+    font-weight: 700;
+    font-size: 30px;
+    color: #fff;
   }
 
   .page-footer {
@@ -187,11 +189,5 @@
     width: 50%;
     display: flex;
     justify-content: space-around;
-  }
-}
-
-@media (min-resolution: 192dpi), (min-resolution: 2dppx) {
-  .arrow {
-    background-image: url(../images/arrow@2x.png);
   }
 }
