--- a/src/sass/components/modal.scss
+++ b/src/sass/components/modal.scss
@@ -40,15 +40,15 @@
 .modal__img {
   position: absolute;
   max-width: 100%;
-  top: 40px;
-  left: 40px;
+  top: 4%;
+  left: 4%;
 }
 
 .modal__close {
   display: block;
   position: absolute;
-  right: 40px;
-  top: 48px;
+  right: 10%;
+  top: 7%;
 
   &-line {
     display: block;
