--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -1,14 +1,17 @@
 // FOOTER ==============
+.footer {
+  margin-top: 59px;
+  background-color: #222222;
+}
+
 .page-footer {
   display: flex;
   position: relative;
   min-height: 470px;
-  background-color: #222222;
-  margin-top: 59px;
 }
 
 .contacts {
-  padding-left: 64px;
+  padding-left: 23px;
   padding-top: 42px;
   font-family: $main-font-stack;
   font-size: 14px;
@@ -43,9 +46,15 @@
   margin-bottom: 33px;
 }
 
+.socials-links {
+  width: 152px;
+  display: flex;
+  justify-content: space-between;
+}
+
 .socials-links__icon {
-  width: 37px;
-  height: 37px;
+  width: 40px;
+  height: 40px;
   padding: 0;
   border: none;
   border-radius: 50%;
@@ -80,7 +89,7 @@
 }
 
 .footer-under__info {
-  margin-left: 44px;
+  margin: 0 auto;
   width: 236px;
   padding-top: 10px;
   display: flex;
@@ -93,6 +102,10 @@
   line-height: 25px;
   font-family: $second-font-stack;
   color: #626263;
+}
+
+.arrow {
+  display: none;
 }
 
 @media (min-width: 768px) {
@@ -115,6 +128,7 @@
     font-weight: 700;
     font-size: 30px;
     color: #fff;
+    text-decoration: none;
   }
 
   .page-footer {
@@ -139,6 +153,7 @@
 
   .page-adress {
     width: 192px;
+    margin-top: 0;
   }
 
   .contacts-list {
@@ -151,10 +166,6 @@
 
   .socials-links {
     display: flex;
-  }
-
-  .socials-links__icon--telegram {
-    margin-left: 20px;
   }
 
   .footer-under {
@@ -189,5 +200,9 @@
     width: 50%;
     display: flex;
     justify-content: space-around;
+  }
+
+  .footer-under__info {
+    margin-left: 0;
   }
 }
